--- a/NetBeansProjects/Poll/web/poll.html
+++ b/NetBeansProjects/Poll/web/poll.html
@@ -7,11 +7,11 @@
     <body>
         <form method="post" action="PollUpdate">
             <p>Are you a CS major? 
-                <input type="radio" name="yesNo" value="yes">Yes
-                <input type="radio" name="yesNo" value="no">No
+                <input type="radio" name="yesNo" value="true" checked="checked">Yes
+                <input type="radio" name="yesNo" value="false">No
             </p>
             <p>
-                <input type="submit" name="Submit" value="Submit">
+                <input type="submit" name="Submit" value="Submit" >
                 <input type="reset" name="Reset" value="Reset">
             </p>
         </form>
